--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    return list(restaurant.values())"
+    "    return list(restaurant.values())[]"
    ]
   },
   {
