--- a/index.ipynb
+++ b/index.ipynb
@@ -196,49 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    return restaurant[]"
+    "    return restaurant['name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[{'alias': 'mexican', 'title': 'Mexican'},\n",
-       "  {'alias': 'diners', 'title': 'Diners'},\n",
-       "  {'alias': 'tradamerican', 'title': 'American (Traditional)'}],\n",
-       " {'latitude': 35.0808088832532, 'longitude': -106.619402244687},\n",
-       " '(505) 266-0550',\n",
-       " 4033.6583235266075,\n",
-       " 'frontier-restaurant-albuquerque-2',\n",
-       " 'https://s3-media4.fl.yelpcdn.com/bphoto/M9L2z6-G0NobuDJ6YTh6VA/o.jpg',\n",
-       " False,\n",
-       " {'address1': '2400 Central Ave SE',\n",
-       "  'address2': '',\n",
-       "  'address3': '',\n",
-       "  'city': 'Albuquerque',\n",
-       "  'country': 'US',\n",
-       "  'display_address': ['2400 Central Ave SE', 'Albuquerque, NM 87106'],\n",
-       "  'state': 'NM',\n",
-       "  'zip_code': '87106'},\n",
-       " 'Frontier Restaurant',\n",
-       " '+15052660550',\n",
-       " '$',\n",
-       " 4.0,\n",
-       " 1369,\n",
-       " [],\n",
-       " 'https://www.yelp.com/biz/frontier-restaurant-albuquerque-2?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ']"
+       "'Frontier Restaurant'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fork & Fig'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "restaurant_name(fork_fig) # 'Fork & Fig'"
    ]
@@ -270,7 +258,7 @@
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    pass"
+    "    return restaurant"
    ]
   },
   {
